[package]
name = "gossiper"
version = "0.0.1"
authors = ["fiksn"]
edition = "2021"
description = "LDK gossip ingestion"
license = "MIT"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
lightning = { version = "0.0.116", features = ["max_level_trace"] }
lightning-block-sync = { version = "0.0.116", features = [ "rpc-client" ] }
lightning-invoice = { version = "0.24.0" }
lightning-net-tokio = { version = "0.0.116" }
lightning-persister = { version = "0.0.116" }
lightning-background-processor = { version = "0.0.116", features = [ "futures" ] }
lightning-rapid-gossip-sync = { version = "0.0.116" }
base64 = "0.21.2"
bitcoin = "0.29.0"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
hex = "0.3"
libc = "0.2"

chrono = "0.4"
rand = "0.4"
serde_json = { version = "1.0" }