[package]
name = "gossiper"
version = "0.0.1"
authors = ["fiksn"]
edition = "2021"
description = "LDK gossip ingestion"
license = "MIT"
build = "build.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
lightning = { path = "../rust-lightning/lightning", features = ["max_level_trace"] }
lightning-block-sync = { path = "../rust-lightning/lightning-block-sync", features = [ "rpc-client" ] }
lightning-invoice = { version = "0.24.0" }
lightning-net-tokio = { path = "../rust-lightning/lightning-net-tokio" }
lightning-persister = { path = "../rust-lightning/lightning-persister" }
lightning-background-processor = { path = "../rust-lightning/lightning-background-processor", features = [ "futures" ] }
lightning-rapid-gossip-sync = { path = "../rust-lightning/lightning-rapid-gossip-sync" }
base64 = "0.13.0"
bitcoin = "0.29.0"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
hex = "0.3"
libc = "0.2"
futures = "0.3"
chrono = "0.4"
rand = { verson = "0.8" }
serde_json = { version = "1.0" }
clap = { version = "4.3.21", features = ["derive"]}
thiserror = { version = "1.0.44" }
parking_lot = { version = "0.12.1"}
periodic_timer = { version = "0.1.1"}