[package]
name = "gossiper"
version = "0.0.1"
authors = ["fiksn"]
edition = "2021"
description = "LDK gossip ingestion"
license = "MIT"
build = "build.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
lightning = { git = "https://github.com/fiksn/rust-lightning", features = ["max_level_trace"] }
lightning-block-sync = {git = "https://github.com/fiksn/rust-lightning", features = [ "rpc-client" ] }
lightning-invoice = { version = "0.24.0" }
lightning-net-tokio = { git = "https://github.com/fiksn/rust-lightning" }
lightning-persister = { git = "https://github.com/fiksn/rust-lightning" }
lightning-background-processor = { git = "https://github.com/fiksn/rust-lightning", features = [ "futures" ] }
lightning-rapid-gossip-sync = { git = "https://github.com/fiksn/rust-lightning" }
base64 = "0.21.3"
# do not upgrade to bitcoon 0.30!
bitcoin = "0.29.2"
bitcoin-bech32 = "0.13.0"
bech32 = "0.9.1"
hex = "0.4.3"
libc = "0.2"
futures = "0.3"
chrono = "0.4"
rand = { verson = "0.8" }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3.21", features = ["derive"]}
thiserror = { version = "1.0.44" }
parking_lot = { version = "0.12.1"}
periodic_timer = { version = "0.1.1"}
reqwest = { version = "0.11", features = ["blocking", "json"] }

